testsuite/bad/bad035.jl
int main() { 
    boolean b=false;
    while(b) return 0; 
}
